    * debian/patches/51_wmaker_man.diff
    * debian/wmaker-common.manpages
    * debian/wmaker.install
    * debian/wmaker.manpages
  * Removed upstream file FAQ.I18N in debian/wmaker-common.docs.

  [ Andreas Metzler ]
  * 56_ignore_runstatedir.diff: Ignore missing documentation for --runstatedir
    in INSTALL.
  * Use dh_autoreconf instead of invoking autogen.sh in the configure target.

 -- Rodolfo García Peñas (kix) <kix@debian.org>  Thu, 13 Aug 2015 20:19:33 +0200

wmaker (0.95.6-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * debian/control:
    - Add Breaks/Replaces for libwraster3-dev; remove Provides for
      libwraster-dev (Closes: #784711).

 -- Doug Torrance <dtorrance@monmouthcollege.edu>  Thu, 21 May 2015 13:34:40 -0500

wmaker (0.95.6-1) unstable; urgency=medium

  * New upstream version 0.95.6. [Closes: #148856]
  * Bumped to standard version 3.9.6. No changes.
  * Removed patch 55_typo.diff because is now in upstream.
  * Patch 56_ungif_problem.diff updated:
    * New name: 55_ungif_problem.diff
    * Now udpates the file m4/wm_imgfmt_check.m4, because upstream moved the
      ungif code from configure.ac to this m4 file.
  * Removed Encoding in debianfiles/wmaker-common.desktop.
    * The Encoding key is now deprecated by the FreeDesktop.
  * Moved library libwings2 to libwings3.
    * Changed in debian/control.
    * Moved libwings2.changelog-upstream to libwings3.changelog-upstream.
    * Moved libwings2.install to libwings3.install.
    * Moved libwings2.symbols to libwings3.symbols.
  * Moved libwraster3-dev to libwraster-dev.
    * Changed in debian/control.
    * Moved libwraster3-dev.changelog-upstream to
      libwraster-dev.changelog-upstream.
    * Moved libwraster3-dev.install to libwraster-dev.install.
    * Moved libwraster3-dev.docs to libwraster-dev.docs.
    * Moved libwraster3-dev.manpages to libwraster-dev.manpages.
      * Updated symbols.
  * Moved libwraster3 to libwraster5.
    * Changed in debian/control.